2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_error),
	(totem_embedded_open_internal), (on_video_button_press_event),
	(on_error_event), (totem_embedded_push_parser):
	Remember the errors, and once we've set the error, allow errors
	to popup when the main window is clicked (Closes: #457337)
	* browser-plugin/totemPlugin.cpp: Fix the plugin not appearing
	when the width or height isn't set

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_construct):
	Don't try to load the logo if we're hidden
	* browser-plugin/totemPlugin.cpp: Match the tiny width/height hacks
	to hide a plugin used in Mozilla, fixes the Sirius Radio streams
	never calling SetWindow() (Closes: #494680)

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Fix the DivX plugin not getting
	any URIs to play on the Stage6 website

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am: Add a log domain for easier debugging
	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_play):
	Tell the plugin we had a button press if we don't have a URI to
	play (Closes: #504795)

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/media-player-keys/totem-media-player-keys.c:
	(impl_activate): Fix the bus name being wrong

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem-lirc.c: (totem_lirc_to_command):
	* src/totem.c: (totem_action_remote):
	* src/totem.h: Patch from Carsten Luedtke
	<acid_man@gmx.net> to allow setting the aspect ratio using
	LIRC (Closes: #514832)

2008-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event):
	Patch by Götz Waschk <waschk@mandriva.org> to fix the
	xine-lib build (Closes: #514391)

2008-02-05  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/properties/totem-movie-properties.c: